--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "strapi build",
     "console": "strapi console",
     "deploy": "strapi deploy",
-    "dev": "strapi develop",
-    "develop": "strapi develop",
+    "dev": "node --max-old-space-size=2048 node_modules/@strapi/strapi/bin/strapi.js develop",
+    "develop": "node --max-old-space-size=2048 node_modules/@strapi/strapi/bin/strapi.js develop",
     "seed:example": "node ./scripts/seed.js",
     "start": "strapi start",
     "strapi": "strapi",
