--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@strapi/plugin-users-permissions": "5.23.5",
     "@strapi/strapi": "5.23.5",
     "better-sqlite3": "11.3.0",
+    "csv-parse": "^6.1.0",
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
     "pg": "^8.12.0",
